# src/category/dto/create-category.dto.ts
@@ -1,0 +1,10 @@
+import { IsNotEmpty, IsString } from "class-validator";
+import { ApiProperty } from "@nestjs/swagger";
+
+
+export class CreateCategoryDto {
+    @ApiProperty({ description: '카테고리의 이름', example: 'GIST' })
+    @IsString()
+    @IsNotEmpty()
+    name!: string;
+}
